--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <a id="logo" href='./'><img src="./images/logo.png" alt="LOGO" /></a>
-        <img id="menu_bar" src="images/menu_bars.svg" alt="menu bars" onclick="handleMenuClick()">
+        <img id="menu_bar" src="./images/menu_bars.svg" alt="menu bars" onclick="handleMenuClick()">
         <nav id="nav_area">
             <a class="selected_nav_item" href="./">Home</a>
             <a href="./about_us.html">About Us</a>
@@ -30,7 +30,7 @@
                 <p>Some service statement that explains the level of customer service that will be provided.</p>
                 <div id="call_to_action_box">
                     <a class="action_btn" href="tel:614-355-3232">Call for More Info</a>
-                    <a href="/services.html">View Our Services</a>
+                    <a href="./services.html">View Our Services</a>
                 </div>
             </div>
         </div>
@@ -53,28 +53,28 @@
                 of our patients, both for the present and future.</p>
             <div id="services">
                 <div class="service">
-                    <img src="images/person_care_nurse.png" alt="personal care picture">
+                    <img src="./images/person_care_nurse.png" alt="personal care picture">
                     <h3>Personal Care</h3>
                     <p>Non-medical assistance with daily living activities including helping with personal hygiene</p>
                     <a class="more_details_btn" href="./services/personal_care.html">
                         More Details
-                        <img src="/images/red_arrow.svg" alt="red arrow font"><img src="/images/red_arrow.svg"
+                        <img src="./images/red_arrow.svg" alt="red arrow font"><img src="./images/red_arrow.svg"
                             alt="red arrow font">
                     </a>
 
                 </div>
                 <div class="service">
-                    <img src="images/house_keeping.png" alt="housekeeping/homemaking picture">
+                    <img src="./images/house_keeping.png" alt="housekeeping/homemaking picture">
                     <h3>Homemaking/Housekeeping</h3>
                     <p>Assistance around the house with tasks such as cleaning, laundry, and cooking</p>
                     <a class="more_details_btn" href="./services/housekeeping.html">
                         More Details
-                        <img src="/images/red_arrow.svg" alt="red arrow font"><img src="/images/red_arrow.svg"
+                        <img src="./images/red_arrow.svg" alt="red arrow font"><img src="./images/red_arrow.svg"
                             alt="red arrow font">
                     </a>
                 </div>
                 <div class="service">
-                    <img src="images/respite_care.jpg" alt="respite care picture">
+                    <img src="./images/respite_care.jpg" alt="respite care picture">
                     <h3>Respite Care</h3>
                     <p>Short time relief from home care so that primary caregiver can take a break</p>
                     <a class="more_details_btn" href="./services/respite_care.html">
@@ -84,32 +84,32 @@
                     </a>
                 </div>
                 <div class="service">
-                    <img src="images/home_visits.jpg" alt="home visits picture">
+                    <img src="./images/home_visits.jpg" alt="home visits picture">
                     <h3>Home Visits</h3>
                     <p>description</p>
                     <a class="more_details_btn" href="./services/home_visits.html">
                         More Details
-                        <img src="/images/red_arrow.svg" alt="red arrow font"><img src="/images/red_arrow.svg"
+                        <img src="./images/red_arrow.svg" alt="red arrow font"><img src="./images/red_arrow.svg"
                             alt="red arrow font">
                     </a>
                 </div>
                 <div class="service">
-                    <img src="images/chore.jpg" alt="intermittent chores picture">
+                    <img src="./images/chore.jpg" alt="intermittent chores picture">
                     <h3>Intermittent Chores</h3>
                     <p>We offer intermittent chore services including clearing snow and cutting grass</p>
                     <a class="more_details_btn" href="./services/intermittent_chores.html">
                         More Details
-                        <img src="/images/red_arrow.svg" alt="red arrow font"><img src="/images/red_arrow.svg"
+                        <img src="./images/red_arrow.svg" alt="red arrow font"><img src="./images/red_arrow.svg"
                             alt="red arrow font">
                     </a>
                 </div>
                 <div class="service">
-                    <img src="images/miscellaneous.jpg" alt="miscellaneous care picture">
+                    <img src="./images/miscellaneous.jpg" alt="miscellaneous care picture">
                     <h3>Miscellaneous</h3>
                     <p>Various other needs such as grocery shopping and other errands</p>
                     <a class="more_details_btn" href="./services/miscellaneous.html">
                         More Details
-                        <img src="/images/red_arrow.svg" alt="red arrow font"><img src="/images/red_arrow.svg"
+                        <img src="./images/red_arrow.svg" alt="red arrow font"><img src="/images/red_arrow.svg"
                             alt="red arrow font">
                     </a>
                 </div>
@@ -122,7 +122,7 @@
             <div id="home_actions">
                 <a href="./appointment.html">
                     <div class="home_action">
-                        <div class="action_font_box"><img src="images/calendar_check_font.svg" alt="Calendar"
+                        <div class="action_font_box"><img src="./images/calendar_check_font.svg" alt="Calendar"
                                 class="action_font"></div>
                         <h3>Set an appointment</h3>
                         <p>Get in touch and find out more about our services</p>
@@ -133,7 +133,7 @@
                 <a href="./insurance.html">
                     <div class="home_action">
                         <div class="action_font_box">
-                            <img src="images/building_shield_font.svg" alt="Building with shield" class="action_font">
+                            <img src="./images/building_shield_font.svg" alt="Building with shield" class="action_font">
                         </div>
                         <div>
                             <h3>Check if we accept your insurance</h3>
@@ -144,7 +144,7 @@
                 <a href="./referral.html">
                     <div class="home_action">
                         <div class="action_font_box">
-                            <img src="images/people_group_font.svg" alt="People group font" class="action_font">
+                            <img src="./images/people_group_font.svg" alt="People group font" class="action_font">
                         </div>
                         <div>
                             <h3>Send Referrals</h3>
@@ -157,7 +157,7 @@
 
         <div id="about_us_section">
             <div id="about_us_left">
-                <img src="images/about_us_pics_web.png" alt="About us pics">
+                <img src="./images/about_us_pics_web.png" alt="About us pics">
                 <!-- <img src="images/nurse_with_man_in_wheelchair.png" alt="Nurse with elder man in wheelchair">
                 <img src="images/elderly_woman_pushed_in_wheelchair.png" alt="ELderly woman being pushed in a wheelchair"> -->
             </div>
@@ -172,7 +172,7 @@
                     odit illum, nisi suscipit, blanditiis accusamus facere sed eius illo natus tenetur voluptates itaque
                     aut dolores.</p>
                 <div class="mission_visions">
-                    <img class="mission_vision_font" src="images/person-circle-question-solid 1.svg" alt="mission font">
+                    <img class="mission_vision_font" src="./images/person-circle-question-solid 1.svg" alt="mission font">
                     <div class="mission_vision_texts">
                         <h4>Our Mission</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus nobis numquam libero iusto
@@ -180,7 +180,7 @@
                     </div>
                 </div>
                 <div class="mission_visions">
-                    <img class="mission_vision_font" src="images/bullseye-solid 1.svg" alt="vision font">
+                    <img class="mission_vision_font" src="./images/bullseye-solid 1.svg" alt="vision font">
                     <div class="mission_vision_texts">
                         <h4>Our Vision</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dolorum facilis ut saepe ad
@@ -196,7 +196,7 @@
             <p>Talk to us about anything</p>
             <div id="contact_us_box">
                 <div id="contact_us_left">
-                    <img src="images/smiling-young-blonde-female-doctor-wearing-medical-robe-stethoscope-around-neck-looking-pointing-side 1.png"
+                    <img src="./images/smiling-young-blonde-female-doctor-wearing-medical-robe-stethoscope-around-neck-looking-pointing-side 1.png"
                         alt="">
                 </div>
                 <div id="contact_us_right">
@@ -245,7 +245,7 @@
                 </form>
             </div>
             <div id="newsletter_subscribe_right">
-                <img src="images/newsletter_handholding.png" alt="">
+                <img src="./images/newsletter_handholding.png" alt="">
             </div>
         </div>
         <div id="footer_bottom">
@@ -254,7 +254,7 @@
                 <div class="social_media">
                     <p>Social Media</p>
                     <div class="social_media_icons">
-                        <img src="images/facebook_icon.svg" alt="Facebook logo">
+                        <img src="./images/facebook_icon.svg" alt="Facebook logo">
                     </div>
                 </div>
             </div>
@@ -306,7 +306,7 @@
             <div class="social_media">
                 <h3>Social Media</h3>
                 <div class="social_media_icons">
-                    <a href=""><img src="images/facebook_icon.svg" alt="Facebook logo"></a>
+                    <a href=""><img src="./images/facebook_icon.svg" alt="Facebook logo"></a>
                 </div>
             </div>
             <div class="footer_newsletter">
