--- a/services/personal_care.html
+++ b/services/personal_care.html
@@ -10,20 +10,20 @@
 
 <body>
     <header>
-        <a id="logo" href='./'><img src="./images/logo.png" alt="LOGO" /></a>
-        <img id="menu_bar" src="images/menu_bars.svg" alt="menu bars" onclick="handleMenuClick()">
+        <a id="logo" href='../'><img src="../images/logo.png" alt="LOGO" /></a>
+        <img id="menu_bar" src="../images/menu_bars.svg" alt="menu bars" onclick="handleMenuClick()">
         <nav id="nav_area">
-            <a class="selected_nav_item" href="./">Home</a>
-            <a href="./about_us.html">About Us</a>
-            <a href="./services.html">Services</a>
-            <a href="./resources.html">Resources</a>
-            <a href="./contact_us.html">Contact Us</a>
+            <a class="selected_nav_item" href="../">Home</a>
+            <a href="../about_us.html">About Us</a>
+            <a href="../services.html">Services</a>
+            <a href="../resources.html">Resources</a>
+            <a href="../contact_us.html">Contact Us</a>
         </nav>
     </header>
 
     <main>
         <span id="breadcrumb">
-            <a href="../services.html">Services</a> <img class="chevron_font" src="/images/arrow.svg"> Personal Care
+            <a href="../services.html">Services</a> <img class="chevron_font" src="../images/red_arrow.svg"> Personal Care
         </span>
         <hr>
         <h1>Personal Care</h1>
@@ -40,30 +40,98 @@
             <li>Aide with therapy</li>
             <li>etc.</li>
         </ul>
-        <p id="contact_us_link">For more inquiries on personal care please do not hesitate to reach out to us by phone at <a href="tel:614-555-5555">614-555-5555</a> or by <a href="/contact_us.html">sending us a message</a></p>
+        <p id="contact_us_link">For more inquiries on personal care please do not hesitate to reach out to us by phone at <a href="tel:614-555-5555">614-555-5555</a> or by <a href="../contact_us.html">sending us a message</a></p>
     </main>
 
     <footer>
-        <div>
-            <h3>Merve Care LLC</h3>
-            <p>Merve Care LLC © 2022</p>
+        <div id="footer_top">
+            <div id="newsletter_subscribe_left">
+                <h2>Something Catchy</h2>
+                <h2>Something Else Catchy</h2>
+                <h3>Subscribe to our newsletter</h3>
+                <form class="newsletter_subscribe_form" action="">
+                    <input type="text" name="newsletter_email" id="" placeholder="Enter your email...">
+                    <input type="submit" value="">
+                </form>
+            </div>
+            <div id="newsletter_subscribe_right">
+                <img src="../images/newsletter_handholding.webp" alt="">
+            </div>
         </div>
-        <div id="footer_quick_links">
-            <h3>Quick Links</h3>
-            <a href="../">Home</a>
-            <a href="../about_us">About Us</a>
-            <a href="../services">Services</a>
-            <a href="../resources">Resources</a>
-            <a href="../contact_us">Contact Us</a>
+        <div id="footer_bottom">
+            <div class="logo_social">
+                <a class="footer_logo" href='../'><img src="../images/logo.png" alt="LOGO" /></a>
+                <div class="social_media">
+                    <p>Social Media</p>
+                    <div class="social_media_icons">
+                        <img src="../images/facebook_icon.svg" alt="Facebook logo">
+                    </div>
+                </div>
+            </div>
+            <div class="footer_quick_links">
+                <h3>Links</h3>
+                <nav>
+                    <a href="../">Home</a>
+                    <a href="./contact_us.html">Contact Us</a>
+                    <a href="../services.html">Services</a>
+                    <a href="../about_us.html">About Us</a>
+                    <a href="../resources.html">Resources</a>
+                </nav>
+            </div>
+            <div class="footer_contact">
+                <h3>Contact</h3>
+                <a href="tel:614-555-5555">614-555-5555</a>
+                <a href="mailto:unknown@email.com">unknown@email.com</a>
+                <a href="mailto:unknownpersonal@email.com">unknownpersonal@email.com</a>
+            </div>
+            <div class="footer_newsletter">
+                <h3>Newsletter</h3>
+                <div class="footer_newsletter_box">
+                    <p>Subscribe to our newsletter</p>
+                    <form class="newsletter_subscribe_form" action="">
+                        <input type="text" name="newsletter_email" id="" placeholder="Enter your email...">
+                        <input type="submit" value="">
+                    </form>
+                </div>
+            </div>
         </div>
-        <div id="footer_contact">
-            <h3>Contact Us</h3>
-            <a href="tel:614-555-5555">614-555-5555</a>
-            <a href="mailto:unknown@email.com">unknown@email.com</a>
-            <a href="mailto:unknownpersonal@email.com">unknownpersonal@email.com</a>
+        <div id="footer_bottom_mobile">
+            <a class="footer_logo" href='../'><img src="../images/logo.png" alt="LOGO" /></a>
+            <div class="footer_contact">
+                <h3>Contact</h3>
+                <a href="tel:614-555-5555">614-555-5555</a>
+                <a href="mailto:unknown@email.com">unknown@email.com</a>
+                <a href="mailto:unknownpersonal@email.com">unknownpersonal@email.com</a>
+            </div>
+            <div class="footer_quick_links">
+                <h3>Links</h3>
+                <nav>
+                    <a href="../">Home</a>
+                    <a href="../contact_us.html">Contact Us</a>
+                    <a href="../services.html">Services</a>
+                    <a href="../about_us.html">About Us</a>
+                    <a href="../resources.html">Resources</a>
+                </nav>
+            </div>
+            <div class="social_media">
+                <h3>Social Media</h3>
+                <div class="social_media_icons">
+                    <a href=""><img src="../images/facebook_icon.svg" alt="Facebook logo"></a>
+                </div>
+            </div>
+            <div class="footer_newsletter">
+                <h3>Newsletter</h3>
+                <div class="footer_newsletter_box">
+                    <p>Subscribe to our newsletter</p>
+                    <form class="newsletter_subscribe_form" action="">
+                        <input type="text" name="newsletter_email" id="" placeholder="Enter your email...">
+                        <input type="submit" value="">
+                    </form>
+                </div>
+            </div>
         </div>
     </footer>
-    <script src="index.js"></script>
+    <script src="../index.js"></script>
 </body>
 
 </html>
