--- a/services/personal_care.html
+++ b/services/personal_care.html
@@ -1,17 +1,17 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../style.css">
-    <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="./service.css">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="./service.css" />
 </head>
 
 <body>
     <header>
-        <a id="logo" href='../'><img src="../images/logo.png" alt="LOGO" /></a>
-        <img id="menu_bar" src="../images/menu_bars.svg" alt="menu bars" onclick="handleMenuClick()">
+        <a id="logo" href="../"><img src="../images/logo.png" alt="LOGO" /></a>
+        <img id="menu_bar" src="../images/menu_bars.svg" alt="menu bars" onclick="handleMenuClick()" />
         <nav id="nav_area">
             <a class="selected_nav_item" href="../">Home</a>
             <a href="../about_us.html">About Us</a>
@@ -23,24 +23,114 @@
 
     <main>
         <span id="breadcrumb">
-            <a href="../services.html">Services</a> <img class="chevron_font" src="../images/red_arrow.svg"> Personal Care
+            <a href="../services.html">Services</a>
+            <img class="chevron_font" src="../images/red_arrow.svg" /> Personal Care
         </span>
+        <hr />
+        <div id="service_description">
+            <div id="service_left">
+                <img src="../images/personal_care_service.webp" alt="" />
+            </div>
+            <div id="service_right">
+                <h1>Personal Care</h1>
+
+                <h2>Merve Care Provides personal care such as:</h2>
+
+                <ul id="service_sublist">
+                    <li>
+                        <img src="../images/check-circle.svg" alt="Check circle icon" />
+                        Dressing
+                    </li>
+                    <li>
+                        <img src="../images/check-circle.svg" alt="Check circle icon" />
+                        Assisting with bath/shower
+                    </li>
+                    <li>
+                        <img src="../images/check-circle.svg" alt="Check circle icon">
+                        Brushing teeth,cleaning dentures
+                    </li>
+                    <li>
+                        <img src="../images/check-circle.svg" alt="Check circle icon">
+                        Nail Care(Filing)
+                    </li>
+                    <li>
+                        <img src="../images/check-circle.svg" alt="Check circle icon">
+                        Help with exercise
+                    </li>
+                    <li>
+                        <img src="../images/check-circle.svg" alt="Check circle icon">
+                        Assistance with eating
+                    </li>
+                    <li>
+                        <img src="../images/check-circle.svg" alt="Check circle icon">
+                        Aide with therapy
+                    </li>
+                    <li>
+                        <img src="../images/check-circle.svg" alt="Check circle icon">
+                        etc.
+                    </li>
+                </ul>
+                <p id="contact_us_link">
+                    For more inquiries on personal care please do not hesitate to reach
+                    out to us by phone at <a href="tel:614-555-5555">614-555-5555</a> or
+                    by <a href="../contact_us.html">sending us a message</a>
+                </p>
+            </div>
+        </div>
         <hr>
-        <h1>Personal Care</h1>
-
-        <h2>Merve Care Provides personal care such as: </h2>
-
-        <ul id="service_sublist">
-            <li>Dressing</li>
-            <li>Assisting with bath/shower</li>
-            <li>Brushing teeth,cleaning dentures</li>
-            <li>Nail Care(Filing)</li>
-            <li>Help with exercise</li>
-            <li>Assistance with eating</li>
-            <li>Aide with therapy</li>
-            <li>etc.</li>
-        </ul>
-        <p id="contact_us_link">For more inquiries on personal care please do not hesitate to reach out to us by phone at <a href="tel:614-555-5555">614-555-5555</a> or by <a href="../contact_us.html">sending us a message</a></p>
+        <div id="service_contact">
+            <div id="service_contact_left">
+                <h2>Contact Us</h2>
+                <p>
+                    Fill out this form to get more information about the personal care
+                    that we provide
+                </p>
+            </div>
+            <div id="service_contact_right">
+                <form>
+                    <div class="form_row">
+                        <div class="form_field">
+                            <input type="text" name="name" placeholder="Name" />
+                        </div>
+                        <div class="form_field">
+                            <input type="email" name="email" placeholder="Email" />
+                        </div>
+                    </div>
+                    <div class="form_row">
+                        <div class="form_field">
+                            <input type="text" name="phone_number" placeholder="Phone Number" />
+                        </div>
+                        <div class="form_field">
+                            <input type="text" name="subject" placeholder="Subject" />
+                        </div>
+                    </div>
+                    <div class="form_row form_field">
+                        <textarea name="message" id="" placeholder="Message"></textarea>
+                    </div>
+                    <input type="submit" value="Submit Your Message" />
+                </form>
+            </div>
+        </div>
+        <!-- <div id="service_bottom">
+            <div class="service_bottom_box">
+                <h3>Learn more about us</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima consequuntur dolores iste culpa,
+                    ducimus officiis nostrum sunt, non quas facilis repudiandae soluta! Voluptas porro tempora non
+                    totam. Doloribus, magnam vel!
+                </p>
+                <a class="action_btn" href="/about_us.html">Learn More</a>
+            </div>
+            <div class="service_bottom_box">
+                <h3>Customer Support</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima consequuntur dolores iste culpa,
+                    ducimus officiis nostrum sunt, non quas facilis repudiandae soluta! Voluptas porro tempora non
+                    totam. Doloribus, magnam vel!
+                </p>
+                <a class="action_btn" href="/about_us.html">Support</a>
+            </div>  
+        </div> -->
     </main>
 
     <footer>
@@ -50,21 +140,21 @@
                 <h2>Something Else Catchy</h2>
                 <h3>Subscribe to our newsletter</h3>
                 <form class="newsletter_subscribe_form" action="">
-                    <input type="text" name="newsletter_email" id="" placeholder="Enter your email...">
-                    <input type="submit" value="">
+                    <input type="text" name="newsletter_email" id="" placeholder="Enter your email..." />
+                    <input type="submit" value="" />
                 </form>
             </div>
             <div id="newsletter_subscribe_right">
-                <img src="../images/newsletter_handholding.webp" alt="">
+                <img src="../images/newsletter_handholding.webp" alt="" />
             </div>
         </div>
         <div id="footer_bottom">
             <div class="logo_social">
-                <a class="footer_logo" href='../'><img src="../images/logo.png" alt="LOGO" /></a>
+                <a class="footer_logo" href="../"><img src="../images/logo.png" alt="LOGO" /></a>
                 <div class="social_media">
                     <p>Social Media</p>
                     <div class="social_media_icons">
-                        <img src="../images/facebook_icon.svg" alt="Facebook logo">
+                        <img src="../images/facebook_icon.svg" alt="Facebook logo" />
                     </div>
                 </div>
             </div>
@@ -89,14 +179,14 @@
                 <div class="footer_newsletter_box">
                     <p>Subscribe to our newsletter</p>
                     <form class="newsletter_subscribe_form" action="">
-                        <input type="text" name="newsletter_email" id="" placeholder="Enter your email...">
-                        <input type="submit" value="">
+                        <input type="text" name="newsletter_email" id="" placeholder="Enter your email..." />
+                        <input type="submit" value="" />
                     </form>
                 </div>
             </div>
         </div>
         <div id="footer_bottom_mobile">
-            <a class="footer_logo" href='../'><img src="../images/logo.png" alt="LOGO" /></a>
+            <a class="footer_logo" href="../"><img src="../images/logo.png" alt="LOGO" /></a>
             <div class="footer_contact">
                 <h3>Contact</h3>
                 <a href="tel:614-555-5555">614-555-5555</a>
@@ -116,7 +206,7 @@
             <div class="social_media">
                 <h3>Social Media</h3>
                 <div class="social_media_icons">
-                    <a href=""><img src="../images/facebook_icon.svg" alt="Facebook logo"></a>
+                    <a href=""><img src="../images/facebook_icon.svg" alt="Facebook logo" /></a>
                 </div>
             </div>
             <div class="footer_newsletter">
@@ -124,8 +214,8 @@
                 <div class="footer_newsletter_box">
                     <p>Subscribe to our newsletter</p>
                     <form class="newsletter_subscribe_form" action="">
-                        <input type="text" name="newsletter_email" id="" placeholder="Enter your email...">
-                        <input type="submit" value="">
+                        <input type="text" name="newsletter_email" id="" placeholder="Enter your email..." />
+                        <input type="submit" value="" />
                     </form>
                 </div>
             </div>
